--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <li>    Земля;</li>
 <li>  Марс.</li>
 </ol>
-<IMG src="./IMG/S3.jpg" align="left" width="300" hspace="10” vspace="10" alt="Планета Земля">
+<IMG src="./IMG/s3.jpg" align="left" width="300" hspace="10” vspace="10" alt="Планета Земля">
 <font color="blue">Зовнішні планети газоподібні</font>, вони більші за розміром за земні, але менш тверді. До зовнішніх планет  </p>
 <p align="right"> належать:  </p> 
 <ol start="5">
@@ -78,7 +78,7 @@
 <hr color="blue" size="3" width="100%">
 </p>
 <p align="center">
-<IMG src="./IMG/S7.jpg" align="middle" width="300" hspace="10” vspace="10" alt="Будова сонячної системи">
+<IMG src="./IMG/s7.jpg" align="middle" width="300" hspace="10” vspace="10" alt="Будова сонячної системи">
 </p>
 <marquee><font color="yellow">Сонячна система</font></marquee>
 				</td>
